$Id: NEWS,v 1.724 2006-03-14 03:18:59 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 2757 - Add support for quota modules to RPM spec
- Bug 2759 - Adding --with-includes to configure can cause problems when
  building with other packages.  Fixed so that CPPFLAGS and LDFLAGS are
  restored to their original settings after running the configure
  script.  This was a regression (of sorts) from fixing Bug #2708.
- Bug 2764 - REST command does not return an error for negative numbers.

1.3.0rc4 - Released 01-Mar-2006
--------------------------------
- Bug 2703 - Disk quota exceeded for small files not being triggered.
- Bug 2706 - utmp/wtmp logging on NetBSD needs some tweaks.
- Bug 2708 - configure cannot detect some headers.  The configure
  script now adds the directories mentioned via the --with-includes
  and --with-libraries options to the CPPFLAGS and LDFLAGS environment
  variables.
- Bug 2711 - Controls socket detection broken.
- Bug 2712 - DisplayFirstChdir directive does not work.
- Bug 2705 - proftpd fails to log anything to syslog after dropping privs
  on Solaris.  This happens because of the default permissions on /dev/log
  on Solaris.
- Portability tweaks for Mac OS 10.4.
- Bug 2729 - Authorative PAM authentication doesn't work.  The mod_auth_pam
  module still had code for supporting the deprecated AuthPAMAuthoritative
  directive.  As per Bug #2440, however, the AuthOrder directive should
  be used for configuring authoritativeness.  This fixes mod_auth_pam
  to behave properly using the new AuthOrder setting.
- Bug 2709 - mod_sql improperly strips spaces from names, allowing for