@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.724 2006-03-14 03:18:59 castaglia Exp $
+$Id: NEWS,v 1.725 2006-03-15 02:09:47 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -17,6 +17,11 @@ CVS
   restored to their original settings after running the configure
   script.  This was a regression (of sorts) from fixing Bug #2708.
 - Bug 2764 - REST command does not return an error for negative numbers.
+- Bug 2717 - Wrong timestamp in logs for chrooted processes.  Ultimately
+  this behavior looks to be a glibc bug.  In the meantime, the workaround
+  is to manually set the TZ environment variable, if it is not already
+  set, before calling chroot().  This bug appears to be specific to
+  glibc, thus the workaround is only enabled on Linux platforms.
 
 1.3.0rc4 - Released 01-Mar-2006
 --------------------------------
